4.service/1.deploy-basic.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: delivery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
        #env: test
    spec:
      containers:
      - name: myapp-con
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
