4.service/3.pod-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-test
  labels:
    app.kubernetes.io/name: myapp
spec:
  containers:
  - name: pod-con
    image: nginx:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
