4.service/2.service-clusterIp.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: delivery
spec:
  type: ClusterIP # 내부 통신용으로 연결하겠다는 의미
  selector:
    app: myapp
  ports:
  - port: 12345
    targetPort: 80 # =container port
