4.service/4.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: delivery
spec:
  ingressClassName: nginx
  rules:
  #- host: <Host>
   - http:
      paths:
      - pathType: Prefix # /로 시작하는 경로 서비스
        path: "/"
        backend:
          service:
            name: front-svc
            port: 
              number: 12345
